Project Airnest {
    database_type: 'PostgresSQL'
}

Table users as U {
  id int [pk, increment]
  full_name varchar
  username varchar
  created_at timestamp
}

Table spots {
    id int [pk, increment]
    description varchar
    price int
    owner int [ref: > U.id]
    address int [ref: > locations.id]
    
}

Table locations {
    id int [pk, increment]
    address varchar
    city varchar
    state varchar
    lat int
    lng int
}

Table reviews {
    id int
    user_id int [ref: > U.id]
    spot_id int [ref: > spots.id]
    review text
    stars int
}

Table bookings {
    spot_id int [ref: > spots.id]
    user_id int [ref: > U.id]
    start_date datetime
    end_date datetime
}

Table images {
    id int [pk, increment]
    spot_id int [ref: > spots.id]
    review_id int [ref: > reviews.id]
    url varchar
}